--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "study-hub-clean",
+  "name": "ai-study-hub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.5.2",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "ioredis": "^5.4.1"
+    "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "eslint": "8.57.0",
+    "eslint-config-next": "15.5.2"
   }
 }
